# win-ghci-wrapper

./: appveyor.yml  stack.yaml  win-ghci-wrapper.cabal
app/: Main.hs
